<resources>
    <string name="app_name">SimpleNavbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_biodata">Biodata</string>
    <string name="menu_nilai">Nilai</string>
    <string name="biodata">Biodata Mahasiswa</string>
    
    <string name="nama">Nama Lengkap :</string>
    <string name="nim">NIM :</string>
    <string name="alamat">Alamat :</string>
    <string name="kota">Kota :</string>
    <string-array name="daftar_kota">
        <item>Pilih Kota</item>
        <item>Semarang</item>
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Solo</item>
        <item>Kudus</item>
        <item>Yogyakarta</item>
        <item>Bandung</item>
        <item>Banten</item>
    </string-array>
    <string name="kelamin">Jenis Kelamin :</string>
    <string name="hobi">Hobi :</string>
    <string name="email">Email :</string>

    <string name="tugas">Nilai Tugas :</string>
    <string name="uts">Nilai UTS :</string>
    <string name="uas">Nilai UAS :</string>
    <string name="ptugas">Nilai Porsentase Tugas</string>
    <string name="puts">Nilai Porsentase UTS</string>
    <string name="puas">Nilai Porsentase UAS</string>
    <string name="akhir">Nilai Akhir</string>
    <string name="huruf">Nilai Huruf</string>
    <string name="predikat">Predikat</string>
</resources>