<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Kuliah">
        <menu>
            <item
                android:id="@+id/nav_biodata"
                android:icon="@drawable/biodata"
                android:title="@string/menu_biodata" />
            <item
                android:id="@+id/nav_nilai"
                android:icon="@drawable/nilai"
                android:title="@string/menu_nilai" />
        </menu>
    </item>

</menu>