<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.simplenavbar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_biodata"
        android:name="com.example.simplenavbar.ui.biodata.BiodataFragment"
        android:label="@string/menu_biodata"
        tools:layout="@layout/fragment_biodata" />

    <fragment
        android:id="@+id/nav_nilai"
        android:name="com.example.simplenavbar.ui.Nilai.NilaiFragment"
        android:label="@string/menu_nilai"
        tools:layout="@layout/fragment_nilai" />
</navigation>