<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_marginHorizontal="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <TextView
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/nama"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/nim"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/tgs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tugas"
                    android:textSize="20sp"/>
                <EditText
                    android:id="@+id/isi_tgs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:id="@+id/uts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/uts"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_uts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:id="@+id/uas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/uas"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_uas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="numberDecimal"/>

            </LinearLayout>
            <Button
                android:id="@+id/reset"
                android:layout_marginTop="450dp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="Reset"
                android:background="#FFF870"
                android:onClick="reset"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="450dp"
                android:layout_marginLeft="75dp"
                android:layout_toRightOf="@id/reset"
                android:background="#FFF87FA8"
                android:onClick="submit"
                android:text="Submit" />

            <TextView
                android:id="@+id/hasil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="550dp"
                android:text="Keterangan Nilai :"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/hnama"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/hasil"
                android:layout_marginTop="20dp"
                android:text="Nama :"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/hnama2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/hasil"
                android:layout_toRightOf="@+id/hnama"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/hnim"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/hnama"
                android:layout_marginTop="15dp"
                android:text="@string/nim"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/hnim2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/hnama2"
                android:layout_toRightOf="@+id/hnama"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/ptgs"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hnim"
                android:layout_marginTop="15dp"
                android:text="@string/ptugas"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/ptgs2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/hnim2"
                android:layout_toRightOf="@+id/ptgs"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/puts"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ptgs"
                android:layout_marginTop="15dp"
                android:text="@string/puts"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/puts2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/ptgs2"
                android:layout_toRightOf="@+id/puts"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/puas"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/puts"
                android:layout_marginTop="15dp"
                android:text="@string/puas"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/puas2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/puts2"
                android:layout_toRightOf="@+id/puts"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/pakhir"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/puas"
                android:layout_marginTop="15dp"
                android:text="@string/akhir"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/pakhir2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/puas2"
                android:layout_toRightOf="@+id/puts"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/phuruf"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pakhir"
                android:layout_marginTop="15dp"
                android:text="@string/huruf"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/phuruf2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/pakhir2"
                android:layout_toRightOf="@+id/puts"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/predikat"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phuruf"
                android:layout_marginTop="15dp"
                android:text="@string/predikat"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/predikat2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/phuruf2"
                android:layout_toRightOf="@+id/puts"
                android:textSize="15sp"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>