<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1250dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="15dp"
                android:orientation="vertical">
            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nama"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/isi_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
                <TextView
                    android:id="@+id/nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/nim"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_nim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/alamat"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/kota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/kota"
                    android:textSize="20sp" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/daftar_kota"
                    android:scrollbarSize="15sp"/>
                <TextView
                    android:id="@+id/tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Tanggal :"
                    android:textSize="20sp" />
                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/isi_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/kelamin"
                    android:textSize="20sp" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laki-Laki"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perempuan"/>
                </RadioGroup>
                <TextView
                    android:id="@+id/hobi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/hobi"
                    android:textSize="20sp" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Membaca"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ngoding"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bersepeda"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Memancing"/>
                <Button
                    android:id="@+id/btn_selesai"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:background="@color/tombol"
                    android:text="Simpan"
                    android:onClick="selesai"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>